--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    h1, .h1{
+    	@apply mt-3 mb-5 text-4xl font-extrabold tracking-tight text-gray-900 md:text-4xl dark:text-white;
+    }
+    
+    h2, .h2 {
+		@apply mt-3 mb-5 text-3xl font-extrabold tracking-tight text-gray-900 md:text-3xl dark:text-white;
+    }
+    
+    h3, .h3{
+    	@apply mt-3 mb-5 text-2xl font-extrabold tracking-tight text-gray-900 md:text-2xl dark:text-white;
+    }
+}
